kubernetes/om/om-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-traefik-ingress
  namespace: om
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`front.tfg.orchestramanager.pw`)
      kind: Rule
      services:
        - name: frontend
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend-traefik-ingress
  namespace: om
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`back.tfg.orchestramanager.pw`)
      kind: Rule
      services:
        - name: backend
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: k8s
              secure: true
